--- a/contents/lessons/lesson-8/week8-final/background.html
+++ b/contents/lessons/lesson-8/week8-final/background.html
@@ -6,7 +6,7 @@
 
 		body {
 			margin: 0;
-			/*background-color: #FF0000;*/
+			/*background-color: #c0c0c0;*/
 			font: 14px verdana;
 			/*background: url(images/gradient.png) repeat-x #c09ccd;*/
 			background: url(images/site.jpg) center fixed ;
