--- a/contents/lessons/lesson-8/week8-final/layout-review.html
+++ b/contents/lessons/lesson-8/week8-final/layout-review.html
@@ -6,7 +6,7 @@
 	<style>
 
 		body {
-			background-color: #FF0000;
+			background-color: #c0c0c0;
 			font: 12px arial;
 		}
 
@@ -75,7 +75,7 @@
 			padding: 20px;
 			font-weight: bold;
 			text-align: right;
-			background-color: #FF0000;
+			background-color: #c0c0c0;
 		}
 	</style>
 
