--- a/contents/lessons/lesson-6/lesson6-homework.html
+++ b/contents/lessons/lesson-6/lesson6-homework.html
@@ -1,173 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Movie News</title>
-	
-	<style>
-	body {
-		background-color: #c0c0c0;
-		font: 12px arial;
-	}
-	
-	#container {
-		width: 800px;
-		background-color: white;
-	}
-	
-	article {
-		padding: 20px;
-	}
-	
-	h1 {
-		font-size: 30px;
-		text-transform: uppercase;
-		margin: 0;
-		color: #1e336a;
-	}
-	
-	.byline {
-		font-size: 11px;
-	}
-	
-	.main-image {
-		background-color: #a0b3f7;
-		margin: 0;
-		padding: 10px;
-		text-align: center;
-	}
-	
-	blockquote {
-		color: #2c478b;
-		margin: 20px;
-		padding: 0;
-		font-size: 13px;
-		font-weight: bold;
-	}
-	
-	blockquote p {
-		line-height: 10px;
-		letter-spacing: -1px;
-	}
-	
-	h2 {
-		color: #2c47b8;
-	}
-	
-	.note {
-		font-size: 10px;
-		font-style: italic;
-		margin: 0;
-	}
-	#global-footer {
-		background-color: black;
-		color: white;
-		padding: 20px;
-	}
-	
-	#global-footer a {
-		color: white;
-		font-weight: bold;
-		text-decoration: none;
-	}
-
-	#global-nav {
-		background-color: #9D9D9D;
-	}
-
-	#global-nav:after {
-		content: "";
-		display: block;
-		clear: both;
-	}
-
-	#global-nav ul {
-		margin: 0;
-		padding: 0;
-	}
-
-	#global-nav li {
-		float: left;
-		list-style: none;
-	}
-
-	#global-nav a {
-		display: block;
-		padding: 5px 10px;
-		color: #1F346C;
-		text-transform: uppercase;
-		text-decoration: none;
-		font-weight: bold;
-	}
-
-	#global-nav a:hover {
-		background-color: #1F346C;
-		color: white;
-	}
-	</style>
-	
+  <title>Organic Foods - HOMEPAGE</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<div id="container">
-	<header>
-		<img src="images/header.png" alt="Movie News">
-	</header>
-	<nav id="global-nav">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="news/index.html">News</a></li>
-			<li><a href="sports/index.html">Sports</a></li>
-			<li><a href="entertainment/index.html">Entertainment</a></li>
-			<li><a href="weather/index.html">Weather</a></li>
-		</ul>
-	</nav>
-	<article>
-		<h1>'Cars' drives away with box office lead</h1>
 
-		<p class="byline">
-			By <strong>DAVID GERMAIN</strong>, AP Movie Writer<br>
-			<em>Mon Jun 12, 6:14 AM ET</em>
-		</p>
-
-		<figure class="main-image">
-			<img src="images/cars_lg.jpg" alt="">
-		</figure>
-
-		<p><strong>LOS ANGELES</strong> - The animated comedy "<em>Cars</em>" raced to first place at the weekend box office with a $62.8 million debut, maintaining the <a href="http://www.pixar.com">Disney-Pixar</a> cartoon brand's undefeated record with a seventh straight hit.</p>
-
-		<p>If the numbers hold when final figures come out Monday, "Cars" would have the third-best opening in the Disney-Pixar cartoon series, just ahead of "Monsters, Inc." but behind "The Incredibles" and "Finding Nemo," which both debuted at about $70 million.</p>
-
-		<p>Still, it was the first time since the partnership began with 1995's "Toy Story" that a Disney-Pixar film did not gross more than its predecessor over opening weekend.</p>
-	
-		<blockquote>
-			<p>"I look at $62 million as being an accomplishment of great proportion," said Chuck Viane, Disney's head of distribution. "I think to use the baseball analogy, a home run is a home run in anybody's ballpark, whether it's 398 feet or 460 feet. This is a home run."</p>
-		</blockquote>
-	
-		<p>The movie features the voices of Owen Wilson and Paul Newman in a story of a hotshot race car that gets a lesson on the value of slowing down when he's sidetracked in a sleepy burgh.</p>
-
-		<p>The weekend's other new wide release, 20th Century Fox's horror remake "The Omen," was No. 4 with $15.45 million. Starring Julia Stiles and Liev Schreiber in the tale of a demon child, "The Omen" has grossed $35.7 million since opening on Tuesday to take advantage of the date - 6-6-06 - a play on the number signifying the anti-Christ.</p>
-	
-		<h2>Top Movies</h2>
-	
-		<ol>
-			<li>"Cars" $62.8 million.</li>
-			<li>"The Break-Up" $20.5 million.</li>
-			<li>"X-Men: The Last Stand" $15.55 million.</li>
-			<li>"The Omen" $15.45 million.</li>
-			<li>"Over the Hedge" $10.301 million</li>
-			<li>"The Da Vinci Code" $10.3 million.</li>
-			<li>"A Prairie Home Companion" $4.7 million.</li>
-			<li>"Mission: Impossible III" $3 million.</li>
-			<li>"RV" $2 million.</li>
-			<li>"Poseidon" $1.8 million.</li>
-		</ol>
-
-		<footer class="note">
-			<p>Universal Pictures and Focus Features are owned by NBC Universal, a joint venture of General Electric Co. and Vivendi Universal;</p>
-		</footer>
-	</article>
-	<footer id="global-footer">
-		<p>&copy; 2013 <a href="http://weekend1.svahtml.com">SVAHTML.com</a></p>
-	</footer>
+<div class="wrapper">
+  <div class="logo">
+    <img src="images/logo.png" alt="">
+  </div>
+  <nav class="global-nav">
+    <ul>
+      <li><a href="link1.html">Nav Item 1</a></li>
+      <li><a href="link2.html">Nav Item 2</a></li>
+      <li><a href="link3.html">Nav Item 3</a></li>
+      <li><a href="link4.html">Nav Item 4</a></li>
+      <li><a href="link5.html">Nav Item 5</a></li>
+    </ul>
+  </nav>
+  <header class="global-header">
+     <figure class="hero">
+       <img src="images/image1.jpg" alt="" />
+       <figcaption>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, sit!</p>
+       </figcaption>
+     </figure>
+  </header>
+  <div class="promos">
+    <ul>
+      <li>
+        <img src="images/image2.jpg" alt="" />
+        <h2>Lorem ipsum dolor.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, totam!</p>
+      </li>
+      <li>
+        <img src="images/image3.jpg" alt="" />
+        <h2>Lorem ipsum dolor.</h2>
+        <p>Soluta, excepturi necessitatibus delectus neque asperiores culpa voluptatem! Assumenda, dolorem.</p>
+      </li>
+      <li>
+        <img src="images/image4.jpg" alt="" />
+        <h2>Lorem ipsum dolor.</h2>
+        <p>Ab labore quae laborum vitae, cumque quasi molestiae molestias ipsum.</p>
+      </li>
+    </ul>
+  </div>
+  <div class="more-content">
+    <ul>
+      <li>
+        <img src="images/image5.jpg" alt="" />
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, omnis, consequuntur! Magnam eligendi cum accusamus eos itaque eveniet sapiente provident.<a href="">Lorem ipsum.</a></p>
+      </li>
+      <li>
+        <img src="images/image6.jpg" alt="" />
+        <p>Corporis odit mollitia dignissimos, eveniet illo nemo recusandae aliquam rerum suscipit sed veritatis aliquid quo! Praesentium, eos, quis. Vel, officia.<a href="">Vero, et.</a></p>
+      </li>
+      <li>
+        <img src="images/image7.jpg" alt="" />
+        <p>Laudantium nostrum suscipit tempora, quam corrupti non ducimus assumenda velit veritatis, iste at aperiam odio amet hic libero, sunt in.<a href="">Fuga, asperiores.</a></p>
+      </li>
+      <li>
+        <img src="images/image8.jpg" alt="" />
+        <p>Esse sint unde commodi provident doloribus accusamus necessitatibus minima placeat, soluta adipisci sequi tempore doloremque quibusdam, laboriosam fugiat illum! Recusandae.<a href="">Adipisci, vitae.</a></p>
+      </li>
+    </ul>
+  </div>
+  <footer class="global-footer">
+    <ul>
+      <li><a href="">Footer Nav Item</a></li>
+      <li><a href="">Footer Nav Item</a></li>
+      <li><a href="">Footer Nav Item</a></li>
+      <li><a href="">Footer Nav Item</a></li>
+    </ul>
+  </footer>
 </div>
 </body>
 </html>
