--- a/contents/lessons/lesson-7/week7/3-layout-intro.html
+++ b/contents/lessons/lesson-7/week7/3-layout-intro.html
@@ -12,7 +12,7 @@
 
 <!-- NOTE we are adding height for this example only.  You should not define a height on a layout element. -->
 
-<div id="container">
+<div class="container">
 	<header>Header</header>
 	<nav>Navigation</nav>
 	<article>Content Area</article>
