Content changes for Summer 2017

--- a/contents/lessons/lesson-3/homework/homework.html
+++ b/contents/lessons/lesson-3/homework/homework.html
@@ -5,15 +5,15 @@
 </head>
 <body>
 
-<div id="site">
-	<header id="global-header">
+<div class="site">
+	<header class="global-header">
 		<h1>2014 Olympic Games</h1>
 	</header>
-	<nav id="global-nav">
+	<nav class="global-nav">
 		<a href="">page 1</a>
 		<a href="">page 2</a>
 		<a href="">page 3</a>
-		<a href="">page 4</a>  
+		<a href="">page 4</a>
 	</nav>
 	<article>
 		<h2>Sochi 2014: Opening ceremony lights a fire for Winter Olympics</h2>
@@ -25,8 +25,6 @@
 		<p>On a chilly night along the shores of the Black Sea, Russia welcomed the world to the Sochi Olympics on Friday with a giant embrace that was equal parts elegant, awkward and Putin.</p>
 
 		<p>The three-hour opening ceremony at Fisht Olympic Stadium highlighted the beauty of the Russian culture and strength of the Russian spirit. But it did little to lift the cloud of uneasiness hanging over a Games that began amid protests over Russian anti-gay laws and fear over terrorism. Somehow it seemed fitting when a set of floating snowflakes suddenly transformed themselves into Olympic rings - but only four of them. The fifth snowflake never changed.</p>
-		
-		<h2></h2>
 
 		<p>That didn't stop IOC President Thomas Bach from making remarks that seemed aimed at Putin's policies, as he delivered a lengthy speech during which he said, "Olympic Games are never about erecting walls to keep people apart. Olympic Games are a sports festival embracing human diversity in great unity."</p>
 
