Update lesson 3 examples

--- a/contents/lessons/lesson-3/homework/homework.html
+++ b/contents/lessons/lesson-3/homework/homework.html
@@ -1,38 +1,129 @@
-<!doctype html>
-<html>
+
+
+<!DOCTYPE html>
+<html >
+
 <head>
-	<title>Homework - week 3</title>
+  <meta charset="UTF-8">
+  <link rel="shortcut icon" type="image/x-icon" href="https://production-assets.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico" />
+  <link rel="mask-icon" type="" href="https://production-assets.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111" />
+  <title>CodePen - A Pen by  Dan Hahn</title>
+
+
+
+
+      <style>
+      /* RGB */
+body {
+  font-family: arial;
+  font-size: 16px;
+  background-color: #3a7f7f;
+}
+
+h1 {
+  color: white;
+  margin: 0;
+}
+
+h2 {
+  color: #3a7f7f;
+}
+
+h3 {
+  color: #4b4b4b;
+}
+
+p {
+  line-height: 1.5em;
+  color: #333333;
+}
+
+.container {
+  width: 1000px;
+}
+
+.header {
+  background-color: #4b4b4b;
+  padding: 1em;
+}
+
+.navigation {
+  background-color: #ead967;
+  padding: 1em;
+}
+
+.navItem {
+  color: #4b4b4b;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.hero-image {
+  margin: 0;
+}
+
+.content {
+  background-color: #e8e8e8;
+  padding: 1em;
+}
+
+.footer {
+  background-color: #ff9060;
+  padding: 1em;
+  text-align: right;
+}
+
+    </style>
+
+
+
+
+
 </head>
-<body>
 
-<div class="site">
-	<header class="global-header">
-		<h1>2014 Olympic Games</h1>
+<body translate="no" >
+
+  <main class="container">
+	<header class="header">
+		<h1>New York</h1>
 	</header>
-	<nav class="global-nav">
-		<a href="">page 1</a>
-		<a href="">page 2</a>
-		<a href="">page 3</a>
-		<a href="">page 4</a>
+	<nav class="navigation">
+		<a href="http://www.syracuse.com"class="navItem">Syracuse</a>
+		|
+		<a href="http://www.rochester.com"class="navItem">Rochester</a>
+		|
+		<a href="http://www.buffalo.com"class="navItem">Buffalo</a>
+		|
+		<a href="http://www.binghamton.com"class="navItem">Binghamton</a>
+		|
+		<a href="http://www.albany.com"class="navItem">Albany</a>
 	</nav>
-	<article>
-		<h2>Sochi 2014: Opening ceremony lights a fire for Winter Olympics</h2>
+	<article class="content">
 
-		<p>An opening ceremony both elegant and awkward and full of Russian history gives the Winter Olympics a warm note at last.</p>
+    <figure class="hero-image"><img src="http://www.svahtml.com/images/nys.jpg" alt="" /></figure>
 
-		<p>SOCHI, Russia - There were human doves twirling to Tchaikovsky, ballerinas waltzing with Tolstoy, and a prolonged roar for a Russian team wearing the coolest of fur-lined coats.</p>
+		<h2>Climate</h2>
 
-		<p>On a chilly night along the shores of the Black Sea, Russia welcomed the world to the Sochi Olympics on Friday with a giant embrace that was equal parts elegant, awkward and Putin.</p>
+		<p>The climate of New York State is broadly representative of the humid continental type that prevails in the northeastern United States, but its articleersity is not usually encountered within an area of comparable size. The Great Lakes, ocean, rivers, and mountains give New York interesting weather. Masses of cold, dry air frequently arrive from the northern interior of the continent. Prevailing winds from the south and southwest transport warm, humid air, which has been conditioned by the Gulf of Mexico and  adjacent subtropical waters. These two air masses provide the dominant continental characteristics of the climate. A third great air mass flows inland from the North Atlantic Ocean and produces cool, cloudy, and damp weather conditions. </p>
+		<p>Nearly all storm and frontal systems moving eastward across the continent pass through or come close in proximity to New York State. Storm systems often move northward along the Atlantic coast and have an important influence on the weather and climate of Long Island and the lower Hudson Valley. Frequently, areas deep in the interior of the state feel the effects of such coastal storms. </p>
 
-		<p>The three-hour opening ceremony at Fisht Olympic Stadium highlighted the beauty of the Russian culture and strength of the Russian spirit. But it did little to lift the cloud of uneasiness hanging over a Games that began amid protests over Russian anti-gay laws and fear over terrorism. Somehow it seemed fitting when a set of floating snowflakes suddenly transformed themselves into Olympic rings - but only four of them. The fifth snowflake never changed.</p>
+		<h3>Winters</h3>
+		<p>The winters are long and cold in the Plateau Divisions of the state. In the majority of winter seasons, a temperature of -13&deg;F (-25&deg;C) or lower can be expected in the northern highlands (Northern Plateau) and 5&deg;F (-15&deg;C) or colder in the southwestern and east-central highlands (Southern Plateau). The Adirondack region records from 35 to 45 days with below zero temperatures in normal to severe winters. Much of Upstate New York, particularly Western and Central New York, are typically affected by lake-effect snows. This usually results in high yearly snowfall totals in these regions. Winters are also long and cold in both Western and Central New York, though not as cold as the Adirondack region. The New York City metro area in comparison to the rest of the state is milder in the winter. Thanks in part to geography (its proximity to the Atlantic and being shielded to the north and west by hillier terrain), the New York metro area usually sees far less snow than the rest of the state. Lake-effect snow rarely affects the New York metro area, except for its extreme northwestern suburbs. Winters also tend to be noticeably shorter here than the rest of the state. </p>
 
-		<p>That didn't stop IOC President Thomas Bach from making remarks that seemed aimed at Putin's policies, as he delivered a lengthy speech during which he said, "Olympic Games are never about erecting walls to keep people apart. Olympic Games are a sports festival embracing human diversity in great unity."</p>
-
-		<p>The evening ended with the giant torch lighted by legendary hockey goaltender Vladislav Tretiak and figure skater Irina Rodnina, who together carried the flame outside the arena and stuck it into what looked like a giant tail section of an airplane. A glow and roar ensued and later, on their way back to the buses and trains, fans huddled around it in awe.</p>
-
+		<h3>Summers</h3>
+		<p>The summer climate is cool in the Adirondacks, Catskills, and higher elevations of the Southern Plateau. The New York City area and lower portions of the Hudson Valley have rather warm summers by comparison, with some periods of high, uncomfortable humidity. The remainder of New York State enjoys pleasantly warm summers, marred by only occasional, brief intervals of sultry conditions. Summer daytime temperatures usually range from the upper 70s to mid 80s&deg;F (25 to 30&deg;C) over much of the State, producing an atmospheric environment favorable to many athletic, recreational, and other outdoor activities. </p>
+		<p>New York ranks 46th among the 50 states in the amount of greenhouse gases generated per person. This efficiency is primarily due to the state's relatively higher rate of mass transit use. </p>
 	</article>
-</div>
+	<footer class="footer">
+		<p>&copy; 2017 SVA HTML </p>
+	</footer>
+</main>
+
+
+
+
 
 
 </body>
 </html>
+ 
