Udpate lesson files

--- a/contents/lessons/lesson-4/margin-padding-paragraph/index.html
+++ b/contents/lessons/lesson-4/margin-padding-paragraph/index.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-
   <meta charset="UTF-8">
-
   <title>Padding and Margin</title>
-
   <link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'>
-
-    <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
-
+  <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
 </head>
 
 <body>
-
 <div class="container">
-
   <h1>Padding and Margin with Paragraphs</h1>
-
 	<div class="alert alert-info">
 		<button class="btn btn-primary" id="padding">Set Padding</button>
 		<button class="btn btn-primary" id="margin">Set Margin</button>
 		<button class="btn" id="color">Toggle Color</button>
 		<button class="btn btn-danger" id="reset">Reset</button>
 	</div>
-
   <div id="content">
 	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consectetur consequatur culpa cupiditate
 		  delectus, deserunt dignissimos dolorum eligendi facere harum illum impedit ipsum magnam minima mollitia natus
@@ -60,14 +50,8 @@
 		  vitae voluptate! Blanditiis commodi nesciunt pariatur temporibus voluptatum. Accusantium beatae commodi
 		  corporis doloremque, dolorum fugiat in, ipsa itaque maiores non odit reiciendis soluta voluptatem!</p>
   </div>
-
-
 </div>
-
-  <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
-
+  <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
-
 </body>
-
 </html>
