--- a/contents/lessons/lesson-4/week4/1-font-properties.html
+++ b/contents/lessons/lesson-4/week4/1-font-properties.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Font Properties</title>
-	
-	<style>
-	
 
-	
+	<style>
+
+
+
 	.font-variant {
-		
+
 	}
-	
+
 	.font-weight {
-		
+
 	}
-	
+
 	.font-size {
-		
+
 	}
-	
+
 	.font-family {
-		
+
 	}
-	
+
 	.font {
-		
+
 	}
-	
+
 	.all {
-		
+
 	}
-	
+
 	h1 {
-		
+
 	}
-		
+
 	</style>
-	
+
 </head>
 
 <body>
@@ -58,7 +61,7 @@
 
 	<p class="all">font (real world)</p>
 </article>
-	
+
 
 
 </body>
