--- a/contents/lessons/lesson-4/week4/2-text-properties.html
+++ b/contents/lessons/lesson-4/week4/2-text-properties.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Font Properties</title>
-	
+
 	<style type="text/css">
-	
-	
+
+
 	.color {
-		
+
 	}
-	
+
 	.letter-spacing {
-		
+
 	}
-	
+
 	.line-height {
-		
+
 	}
-	
+
 	.text-align {
-		
+
 	}
-	
+
 	.text-decoration {
-		
+
 	}
-	
+
 	.text-decoration a {
-		
-	}	
+
+	}
 
 	.text-indent {
-		
+
 	}
-	
+
 	.text-transform {
-		
+
 	}
-	
+
 	.white-space span {
-		
+
 	}
 
 	.white-space-pre {
 
 	}
-	
+
 	.word-spacing {
-		
+
 	}
-	
-	
+
+
 	</style>
-	
+
 </head>
 
 <body>
