--- a/contents/lessons/lesson-7/week10-final/template.html
+++ b/contents/lessons/lesson-7/week10-final/template.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div id="site">
+<div class="wrapper">
     <header class="global-header">
         <h1>Page Title</h1>
     </header>
@@ -18,7 +18,7 @@
             <li><a href="">Weather</a></li>
             <li><a href="">Entertainment</a></li>
         </ul>
-    </nav>    
+    </nav>
     <article class="main">
         <h2>Page Header</h2>
         <p>Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. Place Holder Text. </p>
