--- a/contents/lessons/lesson-7/week7/template.html
+++ b/contents/lessons/lesson-7/week7/template.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<div id="site">
+<div class="wrapper">
     <header class="global-header">
         <h1>Page Title</h1>
     </header>
@@ -17,7 +17,7 @@
             <li><a href="">Nav Item 4</a></li>
             <li><a href="">Nav Item 5</a></li>
         </ul>
-    </nav>    
+    </nav>
     <article class="main">
         <h2>Page Header</h2>
         <p>Replace With Story Content. Replace With Story Content. Replace With Story Content. Replace With Story Content. Replace With Story Content. </p>
