--- a/contents/lessons/lesson-B/lesson5-homework.html
+++ b/contents/lessons/lesson-B/lesson5-homework.html
@@ -96,7 +96,7 @@
 </head>
 
 <body>
-<div id="site">
+<div class="wrapper">
   <header>
     <h1>New York Golden Snowball Award Contest</h1>
   </header>
