--- a/contents/lessons/lesson-4/homework-week4/homework-yourname.html
+++ b/contents/lessons/lesson-4/homework-week4/homework-yourname.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Movie News</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Week 4 Homework</title>
 </head>
 <body>
-<div id="container">
-	<header>
+<main class="container">
+	<header class="global-header">
 		<img src="images/header.png" alt="Movie News">
 	</header>
-	<article>
+	<article class="content-area">
 		<h1>'Cars' drives away with box office lead</h1>
 
 		<p class="byline">
@@ -25,17 +28,17 @@
 		<p>If the numbers hold when final figures come out Monday, "Cars" would have the third-best opening in the Disney-Pixar cartoon series, just ahead of "Monsters, Inc." but behind "The Incredibles" and "Finding Nemo," which both debuted at about $70 million.</p>
 
 		<p>Still, it was the first time since the partnership began with 1995's "Toy Story" that a Disney-Pixar film did not gross more than its predecessor over opening weekend.</p>
-	
+
 		<blockquote>
 			<p>"I look at $62 million as being an accomplishment of great proportion," said Chuck Viane, Disney's head of distribution. "I think to use the baseball analogy, a home run is a home run in anybody's ballpark, whether it's 398 feet or 460 feet. This is a home run."</p>
 		</blockquote>
-	
+
 		<p>The movie features the voices of Owen Wilson and Paul Newman in a story of a hotshot race car that gets a lesson on the value of slowing down when he's sidetracked in a sleepy burgh.</p>
 
 		<p>The weekend's other new wide release, 20th Century Fox's horror remake "The Omen," was No. 4 with $15.45 million. Starring Julia Stiles and Liev Schreiber in the tale of a demon child, "The Omen" has grossed $35.7 million since opening on Tuesday to take advantage of the date - 6-6-06 - a play on the number signifying the anti-Christ.</p>
-	
+
 		<h2>Top Movies</h2>
-	
+
 		<ol>
 			<li>"Cars" $62.8 million.</li>
 			<li>"The Break-Up" $20.5 million.</li>
@@ -53,9 +56,9 @@
 			<p>Universal Pictures and Focus Features are owned by NBC Universal, a joint venture of General Electric Co. and Vivendi Universal;</p>
 		</footer>
 	</article>
-	<footer id="global-footer">
-		<p>&copy; 2013 <a href="http://weekend1.svahtml.com">SVAHTML.com</a></p>
+	<footer class="global-footer">
+		<p>&copy; 2017 <a href="http://www.svahtml.com">SVAHTML.com</a></p>
 	</footer>
-</div>
+</main>
 </body>
 </html>
