--- a/contents/lessons/lesson-4/lesson4-homework.html
+++ b/contents/lessons/lesson-4/lesson4-homework.html
@@ -1,83 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Movie News</title>
-	
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Week 4 Homework</title>
 	<style>
 	body {
 		background-color: #c0c0c0;
-		font: 12px arial;
+		font: 16px arial;
 	}
-	
-	#container {
+
+	.container {
 		width: 800px;
 		background-color: white;
 	}
-	
+
 	article {
-		padding: 20px;
+		padding: 1em;
 	}
-	
+
 	h1 {
-		font-size: 30px;
+		font-size: 2em;
 		text-transform: uppercase;
 		margin: 0;
 		color: #1e336a;
 	}
-	
+
 	.byline {
 		font-size: 11px;
 	}
-	
+
 	.main-image {
 		background-color: #a0b3f7;
 		margin: 0;
-		padding: 10px;
+		padding: 1em;
 		text-align: center;
 	}
-	
+
+	.content-area p {
+		line-height: 1.5em;
+	}
+
 	blockquote {
 		color: #2c478b;
-		margin: 20px;
-		padding: 0;
-		font-size: 13px;
+		margin: 0;
+		padding: .5em 1em;
 		font-weight: bold;
+		border-left: 3px solid #2c478b;
 	}
-	
+
 	blockquote p {
-		line-height: 10px;
+		line-height: 1em;
 		letter-spacing: -1px;
+		margin: 0;
 	}
-	
+
 	h2 {
 		color: #2c47b8;
 	}
-	
+
 	.note {
 		font-size: 10px;
 		font-style: italic;
 		margin: 0;
 	}
-	#global-footer {
+
+	.global-footer {
 		background-color: black;
 		color: white;
 		padding: 20px;
 	}
-	
-	#global-footer a {
+
+	.global-footer a {
 		color: white;
 		font-weight: bold;
 		text-decoration: none;
 	}
 	</style>
-	
 </head>
 <body>
-<div id="container">
-	<header>
+<main class="container">
+	<header class="global-header">
 		<img src="images/header.png" alt="Movie News">
 	</header>
-	<article>
+	<article class="content-area">
 		<h1>'Cars' drives away with box office lead</h1>
 
 		<p class="byline">
@@ -94,17 +101,17 @@
 		<p>If the numbers hold when final figures come out Monday, "Cars" would have the third-best opening in the Disney-Pixar cartoon series, just ahead of "Monsters, Inc." but behind "The Incredibles" and "Finding Nemo," which both debuted at about $70 million.</p>
 
 		<p>Still, it was the first time since the partnership began with 1995's "Toy Story" that a Disney-Pixar film did not gross more than its predecessor over opening weekend.</p>
-	
+
 		<blockquote>
 			<p>"I look at $62 million as being an accomplishment of great proportion," said Chuck Viane, Disney's head of distribution. "I think to use the baseball analogy, a home run is a home run in anybody's ballpark, whether it's 398 feet or 460 feet. This is a home run."</p>
 		</blockquote>
-	
+
 		<p>The movie features the voices of Owen Wilson and Paul Newman in a story of a hotshot race car that gets a lesson on the value of slowing down when he's sidetracked in a sleepy burgh.</p>
 
 		<p>The weekend's other new wide release, 20th Century Fox's horror remake "The Omen," was No. 4 with $15.45 million. Starring Julia Stiles and Liev Schreiber in the tale of a demon child, "The Omen" has grossed $35.7 million since opening on Tuesday to take advantage of the date - 6-6-06 - a play on the number signifying the anti-Christ.</p>
-	
+
 		<h2>Top Movies</h2>
-	
+
 		<ol>
 			<li>"Cars" $62.8 million.</li>
 			<li>"The Break-Up" $20.5 million.</li>
@@ -122,9 +129,9 @@
 			<p>Universal Pictures and Focus Features are owned by NBC Universal, a joint venture of General Electric Co. and Vivendi Universal;</p>
 		</footer>
 	</article>
-	<footer id="global-footer">
-		<p>&copy; 2013 <a href="http://weekend1.svahtml.com">SVAHTML.com</a></p>
+	<footer class="global-footer">
+		<p>&copy; 2017 <a href="http://www.svahtml.com">SVAHTML.com</a></p>
 	</footer>
-</div>
+</main>
 </body>
 </html>
