--- a/contents/lessons/lesson-4/week4/3-include-file.html
+++ b/contents/lessons/lesson-4/week4/3-include-file.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Including a css file</title>	
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Including a css file</title>
 </head>
 
 <body>
