--- a/contents/lessons/lesson-5/lesson5-homework.html
+++ b/contents/lessons/lesson-5/lesson5-homework.html
@@ -1,80 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Organic Foods - HOMEPAGE</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Homework 5</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
+  <main class="container">
+    <header class="global-header">
+      <img src="homework-5/images/header.jpg" alt="">
+      <h1>History of the iPod</h1>
+    </header>
+    <article class="content">
+      <h2>The Original (1st Generation) iPod</h2>
 
-<div class="wrapper">
-  <div class="logo">
-    <img src="images/logo.png" alt="">
-  </div>
-  <nav class="global-nav">
-    <ul>
-      <li><a href="link1.html">Nav Item 1</a></li>
-      <li><a href="link2.html">Nav Item 2</a></li>
-      <li><a href="link3.html">Nav Item 3</a></li>
-      <li><a href="link4.html">Nav Item 4</a></li>
-      <li><a href="link5.html">Nav Item 5</a></li>
-    </ul>
-  </nav>
-  <header class="global-header">
-     <figure class="hero">
-       <img src="images/image1.jpg" alt="" />
-       <figcaption>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, sit!</p>
-       </figcaption>
-     </figure>
-  </header>
-  <div class="promos">
-    <ul>
-      <li>
-        <img src="images/image2.jpg" alt="" />
-        <h2>Lorem ipsum dolor.</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, totam!</p>
-      </li>
-      <li>
-        <img src="images/image3.jpg" alt="" />
-        <h2>Lorem ipsum dolor.</h2>
-        <p>Soluta, excepturi necessitatibus delectus neque asperiores culpa voluptatem! Assumenda, dolorem.</p>
-      </li>
-      <li>
-        <img src="images/image4.jpg" alt="" />
-        <h2>Lorem ipsum dolor.</h2>
-        <p>Ab labore quae laborum vitae, cumque quasi molestiae molestias ipsum.</p>
-      </li>
-    </ul>
-  </div>
-  <div class="more-content">
-    <ul>
-      <li>
-        <img src="images/image5.jpg" alt="" />
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, omnis, consequuntur! Magnam eligendi cum accusamus eos itaque eveniet sapiente provident.<a href="">Lorem ipsum.</a></p>
-      </li>
-      <li>
-        <img src="images/image6.jpg" alt="" />
-        <p>Corporis odit mollitia dignissimos, eveniet illo nemo recusandae aliquam rerum suscipit sed veritatis aliquid quo! Praesentium, eos, quis. Vel, officia.<a href="">Vero, et.</a></p>
-      </li>
-      <li>
-        <img src="images/image7.jpg" alt="" />
-        <p>Laudantium nostrum suscipit tempora, quam corrupti non ducimus assumenda velit veritatis, iste at aperiam odio amet hic libero, sunt in.<a href="">Fuga, asperiores.</a></p>
-      </li>
-      <li>
-        <img src="images/image8.jpg" alt="" />
-        <p>Esse sint unde commodi provident doloribus accusamus necessitatibus minima placeat, soluta adipisci sequi tempore doloremque quibusdam, laboriosam fugiat illum! Recusandae.<a href="">Adipisci, vitae.</a></p>
-      </li>
-    </ul>
-  </div>
-  <footer class="global-footer">
-    <ul>
-      <li><a href="">Footer Nav Item</a></li>
-      <li><a href="">Footer Nav Item</a></li>
-      <li><a href="">Footer Nav Item</a></li>
-      <li><a href="">Footer Nav Item</a></li>
-    </ul>
-  </footer>
-</div>
+      <h3>Availability</h3>
+      <figure class="photo-right">
+        <img src="homework-5/images/gen1.jpg" alt="">
+      </figure>
+      <p>
+        Introduced: Oct. 2001<br>
+        Released: Nov. 2001<br>
+        Discontinued: July 2002
+      </p>
+
+      <p>The 1st generation iPod can be identified by its scroll wheel, surrounded by four buttons (from top, clockwise: menu, forward, play/pause, backwards), and its center button for selecting items. At its introduction, the iPod was a Mac-only product. It required Mac OS 9 or Mac OS X 10.1.</p>
+
+      <p>While it was not the first MP3 player, the original iPod was both smaller and easier to use than many of its competitors at the time. As a result, it quickly attracted accolades and sales. At the time, the iTunes Store did not yet exist (it would be introduced in 2003), so users had to add music to their iPods from CDs or other online sources.</p>
+
+      <p>At the time of its introduction, Apple wasn't the powerhouse company it later became. The initial success of the iPod, and its successor products, were major factors in the company's explosive growth.</p>
+
+      <h2>The Second Generation iPod</h2>
+
+      <h3>Availability</h3>
+      <figure class="photo-left">
+        <img src="homework-5/images/gen2.jpg" alt="">
+      </figure>
+      <p>
+        Released: July 2002</br>
+        Discontinued: April 2003
+      </p>
+
+      <p>The 2nd generation iPod debuted less than a year after the original model's great success. The second generation model added a number of new features including: Windows support, increased storage capacity, and a touch-sensitive wheel, as opposed to the mechanical wheel that the original iPod had used.</p>
+
+      <p>While the body of the device was largely the same as the first generation model, the front of the second generation sported rounded corners. At the time of its introduction, the iTunes Store still had not been introduced (it would appear in 2003).</p>
+
+      <p>The second generation iPod also came in four limited edition models, featuring the signatures of Madonna, Tony Hawk, or Beck, or No Doubt's logo, engraved on the back of the device for an additional $50.</p>
+    </article>
+    <footer class="global-footer">
+      <p>&copy; 2018 SVA HTML</p>
+    </footer>
+  </main>
 </body>
 </html>
