--- a/contents/lessons/lesson-2/week2/0-lesson1-homework.html
+++ b/contents/lessons/lesson-2/week2/0-lesson1-homework.html
@@ -1,67 +1,62 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>New York City</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>About New York - New York City Hall</title>
 </head>
 <body>
+  <main>
+    <header>
+      <h1>About New York</h1>
+    </header>
+    <article>
 
-<div>
-	<header>
-		<h1>New York City</h1>
-	</header>
-	<article>
-		<p>New York is the most populous city in the United States and the center of the New York metropolitan area, the premier gateway for legal immigration to the United States and one of the most populous urban agglomerations in the world. The city is referred to as New York City or the City of New York to distinguish it from the State of New York, of which it is a part.</p>
+      <h2>New York City Hall</h2>
 
-		<p>On one of the world's largest natural harbors, New York City consists of five boroughs, each of which is a county of New York State. The five boroughs—the Bronx, Brooklyn, Manhattan, Queens, and Staten Island—were consolidated into a single city in 1898. With a census-estimated 2013 population of 8,405,837 distributed over a land area of just 305 square miles (790 km2), New York is the most densely populated major city in the United States. </p>
+      <address>
+         New York City<br>
+         City Hall Park<br>
+         New York, NY 10007
+      </address>
 
-		<p>New York traces its roots to its 1624 founding as a trading post by colonists of the Dutch Republic and was named New Amsterdam in 1626. The city and its surroundings came under English control in 1664. New York served as the capital of the United States from 1785 until 1790. It has been the country's largest city since 1790. The Statue of Liberty greeted millions of immigrants as they came to America by ship in the late 19th and early 20th centuries and is a globally recognized symbol of the United States and its democracy.</p>
+      <p>New York City Hall, the seat of New York City government, is located at the center of City Hall Park in the Civic Center area of Lower Manhattan, between Broadway, Park Row, and Chambers Street. The building is the oldest city hall in the United States that still houses its original governmental functions, such as the office of the Mayor of New York City and the chambers of the New York City Council. While the Mayor’s Office is in the building, the staff of thirteen municipal agencies under mayoral control are located in the nearby Manhattan Municipal Building, one of the largest government buildings in the world.</p>
 
-		<p>Many districts and landmarks in New York City have become well known to the city's approximately 55 million annual visitors. Several sources have ranked New York the most photographed city in the world. Times Square, iconified as "The Crossroads of the World", is the brightly illuminated hub of the Broadway Theater District, one of the world's busiest pedestrian intersections, and a major center of the world's entertainment industry. The names of many of the city's bridges, skyscrapers, and parks are known around the world. New York City's financial district, anchored by Wall Street in Lower Manhattan, has been called the world's leading financial center and is home to the New York Stock Exchange, the world's largest stock exchange by total market capitalization of its listed companies. Manhattan's real estate market is among the most expensive in the world. </p>
+      <p>Constructed from 1803 to 1812, New York City Hall is a National Historic Landmark and is listed on the National Register of Historic Places. Both its exterior (1966) and interior (1976) are designated New York City landmarks.</p>
 
-		<blockquote>
-			<p>
-				New York now leads the world’s great cities in the number of people around whom you shouldn’t make a sudden move. <br>
-				--David Letterman
-			</p>
-		</blockquote>
+      <h2>History and description</h2>
 
-		<h2>History</h2>
+      <p>New Amsterdam’s first City Hall was built by the Dutch in the 17th century near 73 Pearl Street. The city’s second City Hall, built in 1700, stood on Wall and Nassau Streets. That building was renamed Federal Hall after New York became the first official capital of the United States after the Revolutionary War. Plans for building a new City Hall were discussed by the New York City Council as early as 1776, but the financial strains of the war delayed progress. The Council chose a site at the old Common at the northern limits of the City, now City Hall Park. City Hall was originally an area for the first almhouse in 1653. In 1736, there was a financed almhouse for those who were fit to work, for the unfit, and those that were like criminals but were paupers.</p>
 
-		<p>In the precolonial era, the area of present day New York City was inhabited by various bands of Algonquian tribes of Native Americans, including the Lenape, whose homeland, known as Lenapehoking, included Staten Island, the western portion of Long Island (including the area that would become Brooklyn and Queens), Manhattan, and the Lower Hudson Valley, including The Bronx.</p>
+      <h2>Quotes about City Hall</h2>
 
-		<p>A pen drawing of two men in 16th-century Dutch clothing presenting an open box of items to a group of Native Americans in feather headdresses stereotypical of plains tribes.</p>
+      <p>City Hall is also referred to in the folk song “The Irish Rover” as performed by The Clancy Brothers, The Pogues and The Dubliners:</p>
 
-		<p>A Spanish expedition led by captain Estevao Gomes, a Portuguese sailing for Emperor Charles V, arrived in New York Harbor in January 1525 aboard the purpose-built caravel "La Anunciada" and charted the mouth of the Hudson river, which he named Rio de San Antonio. Heavy ice kept him from further exploration, and he returned to Spain in August. The first scientific map to show the North American East coast continuously, the 1527 world map known as the Padrón Real, was informed by Gomes' expedition, and labeled the Northeast as Tierra de Esteban Gómez in his honor.</p>
+      <blockquote>
+        <p>
+          In the year of our Lord, eighteen hundred and six,<br>
+          We set sail from the Coal Quay of Cork<br>
+          We were sailing away with a cargo of bricks<br>
+          For the grand City Hall in New York
+        </p>
+      </blockquote>
 
-		<p>In 1609, English explorer Henry Hudson re-discovered the region when he sailed his ship the Halve Maen ("Half Moon" in Dutch) into New York Harbor while searching for the Northwest Passage to the Orient for his employer the Dutch East India Company. He proceeded to sail up what he named the North River, also called the Mauritis River, and now known as the Hudson River, to the site of the present-day New York State capital of Albany in the belief that it might represent an oceanic tributary. </p>
+      <h2>In popular culture</h2>
 
-		<h2>Cityscape</h2>
+      <p>New York City Hall has played a central role in several films and television series.</p>
 
-		<h3>Architecture</h3>
+      <ul>
+        <li>Spin City (1996–2002), set in City Hall, starred Michael J. Fox as a Deputy Mayor making efforts to stop the dim-witted Mayor from embarrassing himself in front of the media and voters.</li>
+        <li>City Hall (1996) starred Al Pacino as an idealistic Mayor and John Cusack as his Deputy Mayor, who leads an investigation with unexpectedly far-reaching consequences into an accidental shooting.</li>
+        <li>In the 1984 movie Ghostbusters the Mayor summons the protagonists to City Hall to discuss the impending end of the world.</li>
+        <li>In the 2016 movie Fantastic Beasts and Where to Find Them, part of J. K. Rowling’s Wizarding World, Senator Henry Shaw (played by Josh Cowdery) holds a fundraising dinner at City Hall for his re-election; this dinner is later disrupted by a magical force that attacks him while he is delivering a speech. St George’s Hall, in Liverpool, stands-in for the City Hall in both interior and exterior scenes.</li>
+      </ul>
+    </article>
+    <footer>
+      <p>(c) 2017 SVA HTML</p>
+    </footer>
+  </main>
 
-		<p>New York has architecturally noteworthy buildings in a wide range of styles and from distinct time periods, from the saltbox style Pieter Claesen Wyckoff House in Brooklyn, the oldest section of which dates to 1656, to the modern One World Trade Center, the skyscraper currently under construction at Ground Zero in Lower Manhattan and currently the most expensive new office tower in the world.</p>
-
-		<p>Manhattan's skyline with its many skyscrapers is universally recognized, and the city has been home to several of the tallest buildings in the world. As of 2011, New York City had 5,937 high-rise buildings, of which 550 completed structures were at least 330 feet (100 m) high, both second in the world after Hong Kong, with over 50 completed skyscrapers taller than 656 feet (200 m). These include the Woolworth Building (1913), an early gothic revival skyscraper built with massively scaled gothic detailing.</p>
-
-		<p>The 1916 Zoning Resolution required setbacks in new buildings, and restricted towers to a percentage of the lot size, to allow sunlight to reach the streets below. The Art Deco style of the Chrysler Building (1930) and Empire State Building (1931), with their tapered tops and steel spires, reflected the zoning requirements. The buildings have distinctive ornamentation, such as the eagles at the corners of the 61st floor on the Chrysler Building, and are considered some of the finest examples of the Art Deco style. A highly influential example of the international style in the United States is the Seagram Building (1957), distinctive for its façade using visible bronze-toned I-beams to evoke the building's structure. The Condé Nast Building (2000) is a prominent example of green design in American skyscrapers.</p>
-
-		<h3>Boroughs</h3>
-
-		<ul>
-			<li>Manhattan (New York County) is the most densely populated borough and is home to Central Park and most of the city's skyscrapers. </li>
-			<li>The Bronx (Bronx County) is New York City's northernmost borough, the location of Yankee Stadium, home of the New York Yankees, and home to the largest cooperatively owned housing complex in the United States, Co-op City..</li>
-			<li>Brooklyn (Kings County), on the western tip of Long Island, is the city's most populous borough and was an independent city until 1898. Brooklyn is known for its cultural, social and ethnic diversity, an independent art scene.</li>
-			<li>Queens (Queens County), on Long Island east of Brooklyn, is geographically the largest borough, the most ethnically diverse county in the United States, as well as the most ethnically diverse urban area in the world.</li>
-			<li>Staten Island (Richmond County) is the most suburban in character of the five boroughs. Staten Island is connected to Brooklyn by the Verrazano-Narrows Bridge and to Manhattan by way of the free Staten Island Ferry.</li>
-		</ul>
-
-		<h3>Climate</h3>
-
-		<p>Winters are cold and damp, and prevailing wind patterns that blow offshore minimize the moderating effects of the Atlantic Ocean; yet the Atlantic and the partial shielding from colder air by the Appalachians keep the city warmer in the winter than inland North American cities at similar or lesser latitudes such as Pittsburgh, Cincinnati, and Indianapolis. The daily mean temperature in January, the area's coldest month, is 32.6 °F (0.3 °C); however, temperatures usually drop to 10 °F (−12 °C) several times per winter, and reach 50 °F (10 °C) several days each winter month. Spring and autumn are unpredictable and can range from chilly to warm, although they are usually mild with low humidity. Summers are typically warm to hot and humid, with July daily mean temperature of 76.5 °F (24.7 °C). Nighttime conditions are often exacerbated by the urban heat island phenomenon, while daytime temperatures exceed 90 °F (32 °C) on average of 17 days each summer and in some years exceed 100 °F (38 °C). Extreme temperatures have ranged from −15 °F (−26 °C), recorded on February 9, 1934, up to 106 °F (41 °C) on July 9, 1936.</p>
-	</article>
-	<footer>
-		(c)2014 SVA HTML
-	</footer>
-  </div>
 </body>
 </html>
